fix: fix Monaco fallback visibility on mobile

--- a/packages/obsidian/src/styles.css
+++ b/packages/obsidian/src/styles.css
@@ -328,3 +328,7 @@ body.is-phone .cm-content .shiki-editing-codeblock-nowrap::-webkit-scrollbar {
 .cm-content .shiki-monaco-codeblock.shiki-monaco-codeblock-ready > .shiki-monaco-codeblock-fallback {
 	display: none;
 }
+
+.cm-content .shiki-monaco-codeblock:has(.monaco-editor) > .shiki-monaco-codeblock-fallback {
+	display: none;
+}
